# aoc2023

./: CMakeLists.txt
day1/: day1part1.cpp  day1part2.cpp
day2/: day2part1.cpp
